test/should-fail/jfxc1863.fx
/**
 * Should-fail test JFXC-1863 : Check for multiple run functions
 *
 * @test/compile-error
 */

function run() {
}

function run() {
}
